# Grafyx

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  index.html  script.js  style.css
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy-web.yml  release.yml
src/: cli.rs  ir.rs  linker.rs  main.rs  scanner.rs  storage.rs  template.html
src/parser/: generic.rs  js.rs  mod.rs
tool/: Cargo.toml  release.json
tool/src/: cli.rs  ir.rs  lib.rs  linker.rs  main.rs  scanner.rs  storage.rs  template.html  update.rs
tool/src/parser/: generic.rs  mod.rs
tool/tests/: smoke_test.rs  verify_signatures.rs
web/: CNAME  index.html  script.js  style.css
