[package]
name = "grafyx"
version = "0.1.4"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4.22"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
streaming-iterator = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.26"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-java = "0.23"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
self_update = { version = "0.44", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"], optional = true }
home = "0.5"
anyhow = "1.0"
blake3 = "=1.8.2"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
    # Removed openssl-vendored to allow pure-rust build with rustls
    zeroize = { version = "1.7", features = ["derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
colored = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.10"
hex = "0.4.3"
reqwest = { version = "0.12", features = ["blocking"] }

[features]
default = ["self-update"]
"self-update" = ["dep:self_update"]

[dev-dependencies]

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
windows-sys = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
